<resources>
    <string name="app_name">Kotlin+Firebase</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="select_photo">Select Photo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
</resources>
