<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.vickikbt.kotlinfirebase.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.vickikbt.kotlinfirebase.ui.messages.MessagesFragment"
        android:label="@string/messages"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.vickikbt.kotlinfirebase.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>