<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailContainerLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailAddress_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordContainerLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/emailContainerLogin"
            app:layout_constraintStart_toStartOf="@+id/emailContainerLogin"
            app:layout_constraintTop_toBottomOf="@+id/emailContainerLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button"
            android:elevation="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/register"
            android:textColor="@color/White"
            app:layout_constraintEnd_toEndOf="@+id/passwordContainerLogin"
            app:layout_constraintStart_toStartOf="@+id/passwordContainerLogin"
            app:layout_constraintTop_toBottomOf="@+id/passwordContainerLogin" />

        <TextView
            android:id="@+id/goToRegister_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:elevation="10dp"
            android:text="@string/don_t_have_an_account"
            app:layout_constraintEnd_toEndOf="@+id/login_Button"
            app:layout_constraintStart_toStartOf="@+id/login_Button"
            app:layout_constraintTop_toBottomOf="@+id/login_Button" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>